# Northwind-Advanced-SQL-Reports

./: .env-example  .pre-commit-config.yaml  .sqlfluff  README.md  exercicio_1_trigger_funcionario_salario.sql  mkdocs.yml  profiles.yml  pyproject.toml  trigger_stored_procedures_employees_auditoria.sql
northwind/: dbt_project.yml
northwind/models/marts/sales/: _sales_models.yaml  mart_sales_clients_to_marketing.sql  mart_sales_customers.sql  mart_sales_receitas_acumuladas.sql  mart_sales_top_10_products.sql  mart_sales_total_revenues_1997.sql  mart_sales_total_revenues_per_customer.sql  mart_sales_total_revenues_per_customer_group.sql  mart_sales_uk_clients_who_pay_more_than_1000.sql
northwind/models/staging/: _stg_models.yml  _stg_source.yml  stg_customers.sql  stg_order_details.sql  stg_orders.sql  stg_products.sql
triggers/: exercicio_2_trigger_estoque_venda.sql  trigger_function_sales_accumulated_monthly_mv.sql
